fixed layout issue with front end

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,188 +1,96 @@
+main {
+  margin-left: 15%;
+}
+
 form.signup,
 form.login {
   margin-top: 50px;
 }
 
-ul {
-  list-style-type: none;
-}
-
-.side-bar {
-  width: 15%;
-  transition: width .5s;
-  z-index: 99;
-}
-
-main {
-  margin-left: 15%;
-}
-
-.side-bar:hover {
-  width: 40%;
-}
-
-.list-group-item {
-  color: white !important;
-  background-color: #333;
-  font-size: 10px;
-  border-color: rgb(95, 95, 95);
-}
-
-.side-bar a {
-  color: white;
-  text-align: center;
-}
-
-#here {
-  color: blue;
-}
-
-.side-bar-nav-text {
-  display: none;
-}
-
-.tab-content {
-  overflow: auto;
-}
-
-.products-table {
-  overflow: auto;
-}
-
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .side-bar-nav-text {
-      display: inline
-  }
-
-  .side-bar li {
-
-      text-align: start !important;
-  }
-
-  .side-bar {
-      width: 15%;
-      text-align: start !important;
-  }
-
-  .side-bar:hover {
-      width: 15%;
-  }
-}
-
-.table-editable {
-  overflow: auto;
-}
-
-.pt-3-half {
-  padding-top: 1.4rem;
-}
-
-.brand-name {
-  display: none;
-}
-
-.employee-list li:hover {
-  border-radius: .25rem;
-  background-color: rgb(238, 238, 238);
-}
-
-.table-remove {
-  white-space: nowrap;
-}
-
-.center-title {
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  align-content: center;
-  margin-top: 12px;
-}
-form.signup,
-form.login {
-  margin-top: 50px;
-}
-ul {
-  list-style-type: none;
-}
-.side-bar {
-  width: 15%;
-  transition: width .5s;
-  z-index: 99;
-}
-main {
-  margin-left: 15%;
-}
-.side-bar:hover {
-  width: 40%;
-}
-.list-group-item {
-  color: white !important;
-  background-color: #333;
-  font-size: 10px;
-  border-color: rgb(95, 95, 95);
-}
-.side-bar a {
-  color: white;
-  text-align: center;
-}
-#here {
-  color: blue;
-}
-.side-bar-nav-text {
-  display: none;
-}
-.tab-content {
-  overflow: auto;
-}
-.products-table {
-  overflow: auto;
-}
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .side-bar-nav-text {
-      display: inline
-  }
-  .side-bar li {
-      text-align: start !important;
-  }
-  .side-bar {
-      width: 15%;
-      text-align: start !important;
-  }
-  .side-bar:hover {
-      width: 15%;
-  }
-}
-.table-editable {
-  overflow: auto;
-}
-.pt-3-half {
-  padding-top: 1.4rem;
-}
-.brand-name {
-  display: none;
-}
-.employee-list li:hover {
-  border-radius: .25rem;
-  background-color: rgb(238, 238, 238);
-}
-.table-remove {
-  white-space: nowrap;
-}
-.center-title {
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  align-content: center;
-  margin-top: 12px;
-}
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
+
+#here {
+  color: blue;
+}
+
+.tab-content {
+  overflow: auto;
+}
+
+.products-table {
+  overflow: auto;
+}
+
+.table-remove {
+  white-space: nowrap;
+}
+
+.list-group-item {
+  color: white !important;
+  background-color: #333;
+  font-size: 10px;
+  border-color: rgb(95, 95, 95);
+}
+
+.table-editable {
+  overflow: auto;
+}
+
+.pt-3-half {
+  padding-top: 1.4rem;
+}
+
+.brand-name {
+  display: none;
+}
+
+.employee-list li:hover {
+  border-radius: .25rem;
+  background-color: rgb(238, 238, 238);
+}
+
+.center-title {
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  align-content: center;
+  margin-top: 12px;
+}
+
+/* side bar */
+
+.side-bar a {
+  color: white;
+  text-align: center;
+}
+
+.side-bar-nav-text {
+  display: none;
+}
+
+.side-bar {
+  width: 15%;
+  transition: width .5s;
+  z-index: 99;
+}
+
+.side-nav {
+  padding: 0;
+  margin: 0;
+}
+
+.nav-bar-link {
+  display: none;
+}
+
+.navbar-toggler {
+  display: inline-block;
+}
+
 .side-bar-nav {
   position: fixed;
   top: 0;
@@ -193,16 +101,7 @@ ul {
   transition: left 0.5s;
   z-index: 99;
 }
-.side-nav {
-  padding: 0;
-  margin: 0;
-}
-.nav-bar-link {
-  display: none;
-}
-.navbar-toggler {
-  display: inline-block;
-}
+
 .side-bar-nav-shop-list {
   position: absolute;
   top: 0;
@@ -213,6 +112,36 @@ ul {
   transition: left 0.5s;
   z-index: 199;
 }
+
+/* cart */
+#cart-item-count {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+#cart-table {
+  overflow: auto;
+}
+
+/* products display */
+.product-thumbnail {
+  border-radius: .35rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all .3s cubic-bezier(.25,.8,.25,1);
+}
+
+.product-thumbnail:hover {
+  box-shadow: 0 14px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card-img-top {
+  height: 10rem;
+}
+
+/* media queries */
+
+/* tablets */
 @media only screen and (min-width: 576px) {
   .nav-bar-link {
     display: inline-block;
@@ -221,11 +150,20 @@ ul {
     display: none;
   }
 }
-#cart-item-count {
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-}
-#cart-table {
-  overflow: auto;
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .side-bar-nav-text {
+      display: inline
+  }
+  .side-bar li {
+      text-align: start !important;
+  }
+  .side-bar {
+      width: 15%;
+      text-align: start !important;
+  }
+  .side-bar:hover {
+      width: 15%;
+  }
 }
